update 4.0.0 guides